# codetracer-ruby-recorder

./: .editorconfig  .gitattributes  .gitignore  .rubocop.yml  AGENTS.md  AUDIT-CTFS-2026-05.md  Gemfile  Justfile  MAINTAINERS.md  MAINTANERS.md  README.md  Rakefile  codetracer-ruby-recorder.gemspec  codetracer_pure_ruby_recorder.gemspec  env.ps1  env.sh  flake.nix  listing-001.md  listing-002.md  listing-003.md  listing-004.md  listing-005.md  listing-006.md  repro.nim
.agents/: codebase-insights.txt  codex-setup  download-internet-resources.sh
.codex/: build_all_targets.sh  setup.sh
.codex/deps_src/: AGENTS.md
.codex/internet_resources/: download.sh
.devcontainer/: README.md  devcontainer.json
.github/: FUNDING.yml  sibling-pins  sibling-pins.json
.github/workflows/: ci-reprobuild.yml  ci.yml  launcher-integration.yml  publish.yml
codetracer/: kernel_patches.rb
examples/: code_provider.rb  reference_cycle.rb  runtime_code_execution.rb  selective_tracing.rb  selective_tracing_pure.rb
ext/native_tracer/: Cargo.toml  README.md  extconf.rb
ext/native_tracer/src/: lib.rs
gems/codetracer-pure-ruby-recorder/: README.md  codetracer_pure_ruby_recorder.gemspec
gems/codetracer-rack/: codetracer-rack.gemspec
gems/codetracer-ruby-recorder/: codetracer-ruby-recorder.gemspec
gems/codetracer-ruby-recorder/ext/native_tracer/: Cargo.toml  README.md
gems/codetracer-ruby-recorder/ext/native_tracer/src/: lib.rs
gems/native-tracer/: codetracer-ruby-recorder.gemspec
gems/native-tracer/ext/native_tracer/: Cargo.toml
gems/native-tracer/ext/native_tracer/src/: lib.rs
gems/pure-ruby-tracer/: codetracer_pure_ruby_recorder.gemspec
non-nix-build/windows/: README.md  bootstrap-windows-diy.ps1  env.ps1  env.sh  toolchain-versions.env
scripts/: publish_gems.rb  rdbg-wrapper  targets.txt
src/: native_trace.rb  recorder.rb  trace.rb
test/: gem_installation.rb  test_column_aware.rb  test_hcr.rb  test_kernel_patches.rb  test_m16a_assignments.rb  test_rack_integration.rb  test_rack_middleware.rb  test_tracer.rb
test-programs/rb_sudoku_solver/: sudoku_solver.rb
test/benchmarks/: README.md  run_benchmark.rb  run_benchmarks.rb
test/fixtures/: addition_trace.json  args_sum_trace.json  array_sum_trace.json  blocks_procs_lambdas_output.txt  blocks_procs_lambdas_trace.json  classes_output.txt  classes_trace.json  collections_extras_output.txt  (+11 more)
tests/: verify-cli-convention-no-silent-skip.sh
(+60 files in other folders)
