# Cargo.toml
[package]
name = "codetracer_ruby_recorder"
description = "Native Ruby module for generating CodeTracer trace files"
version = "0.1.0"
edition = "2021"
crate-type = ["cdylib"]
build = "build.rs"

[dependencies]
rb-sys = "0.9"
runtime_tracing = "0.10.0"

[build-dependencies]
rb-sys-env = "0.2"
