# Cargo.toml
[package]
name = "codetracer_ruby_recorder"
description = "Native Ruby module for generating CodeTracer trace files"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
rb-sys = "0.9"
runtime_tracing = "0.15.0"

[build-dependencies]
rb-sys-env = "0.2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
