# Cargo.toml
[package]
name = "codetracer_ruby_recorder"
description = "Native Ruby module for generating CodeTracer trace files"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
rb-sys = "0.9"
codetracer_trace_types = { path = "../../../../../codetracer-trace-format/codetracer_trace_types" }
codetracer_trace_writer_nim = { path = "../../../../../codetracer-trace-format/codetracer_trace_writer_nim" }
codetracer_ctfs = { path = "../../../../../codetracer-trace-format/codetracer_ctfs" }

[build-dependencies]
rb-sys-env = "0.2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
